--- a/Carline the Cat/friend.html
+++ b/Carline the Cat/friend.html
@@ -9,7 +9,7 @@
         <p>Carline is happy to have a friend with her in the box! The start out with small talk, but then her new rat friend starts talking about his firm belief in the flat Earth movement. Maybe it's best to just eat him.</p>
         <img src="Screen%20Shot%202018-02-15%20at%205.39.18%20PM.png">
         <a href="eatIt.html">
-            <img src="https://dabuttonfactory.com/button.png?t=Just+Eat+Him.&f=Calibri-Bold&ts=24&tc=fff&tshs=1&tshc=000&hp=20&vp=8&c=5&bgt=gradient&bgc=e69138&ebgc=4c1130">
+            Just eat him.
         </a>
     
     </body>
