--- a/Carline the Cat/scream2.html
+++ b/Carline the Cat/scream2.html
@@ -8,9 +8,11 @@
         <h1>SCREAAAAAAAM!!!!</h1>
         <p>Kim K is so scared of Carline's scream that she jumps out the window. Carline's head is still stuck.</p>
         <img src="Screen%20Shot%202018-02-15%20at%205.39.18%20PM.png">
+        
+        <div>
         <a href="carlineTheCat.html">
-            <img src="https://dabuttonfactory.com/button.png?t=Back+to+Start&f=Calibri-Bold&ts=24&tc=fff&tshs=1&tshc=000&hp=20&vp=8&c=5&bgt=gradient&bgc=e69138&ebgc=4c1130">
+            Back to start
         </a>
-    
+        </div>
     </body>
 <html>
